apps/novnc/novnc-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: remote-access
  annotations:
    argocd.argoproj.io/sync-wave: "1"
