apps/novnc/novnc-service.yml
apiVersion: v1
kind: Service
metadata:
  name: novnc
  namespace: remote-access
  labels:
    app: novnc
    app.kubernetes.io/name: novnc
    app.kubernetes.io/component: remote-access
    argocd.argoproj.io/managed-by: argocd
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: novnc
