apps/novnc/novnc-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novnc
  namespace: remote-access
  labels:
    app: novnc
    app.kubernetes.io/name: novnc
    argocd.argoproj.io/managed-by: argocd
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
  - secretName: novnc-tls
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: novnc
            port:
              number: 80
